# hairpin

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: chess2.1.3_assembly_chr21_pos.gff  chess2.1.3_assembly_chr21_pos_introns.gff  drosophila_4.fasta  drosophila_4.gff  drosophila_4_pos.gff  drosophila_4_pos_introns.gff  test_genome.fasta
data/reads_3_1_151/: sim_counts_matrix.rda
data/reads_drosophila_4_6_1_151/: sim_counts_matrix.rda  sim_tx_info.txt
data/reads_drosophila_4_pos_6_1_151/: sim_counts_matrix.rda  sim_tx_info.txt
data/reads_human_3_1_151/: sim_rep_info.txt  sim_tx_info.txt
data/reads_test/: reads.fa
src/: HDB.cpp  HDB.h  HGraph.cpp  HGraph.h  MinMap.cpp  MinMap.h
